--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "ProyectoIntr/wsgi.py"
+            "dest": "ProyectoIntro/wsgi.py"
         }
     ]
 }
